--- a/working-with-hemibrain-data.Rmd
+++ b/working-with-hemibrain-data.Rmd
@@ -86,7 +86,7 @@ plot3d(FCWB)
 ```
 
 <font size=5> Find synapse locations</font>
-```{r, webgl=TRUE, echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+```{r, webgl=TRUE, echo=TRUE,results='hide'}
 R1_synapses=neuprint_get_synapses(R1.info$bodyid)
 
 open3d(userMatrix=hemibrainMatrix,windowRect=windowRect,zoom=0.7)
@@ -97,19 +97,13 @@ points3d(xyzmatrix(R1_synapses),col='red',lwd=2)
 clear3d()
 ```
 <font size=5> Get synaptic partners</font>
-```{r,echo=FALSE,results='hide',message=FALSE,warning=FALSE}
-R1_all_inputs.neurons <- read.neurons('data/R1_all_input_neurons.swc',class="neuron")
-R1_all_outputs.neurons <- read.neurons('data/R1_all_output_neurons.swc',class="neuron") 
-```
+
 Finding all the <span style="color:red"> presynaptic partners of the R1 neurons 
-```{r,echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+```{r,webgl=TRUE, echo=TRUE,results='hide'}
 #get all inputs to R1 neurons 
 R1_all_inputs=unique(neuprint_connection_table(R1.info$bodyid,prepost='PRE')$partner)
-```
-```{r,echo=TRUE,results='hide',message=FALSE,warning=FALSE,eval=FALSE}
 R1_all_inputs.neurons=neuprint_read_neurons(R1_all_inputs$bodyid)
-```
-```{r, webgl=TRUE, echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+
 open3d(userMatrix=hemibrainMatrix,windowRect=windowRect,zoom=0.7)
 plot3d(R1_neurons,col='black',lwd=2,WithNodes=FALSE,soma=TRUE)
 plot3d(R1_all_inputs.neurons,col='red',lwd=2,WithNodes=FALSE,soma=TRUE)
@@ -118,20 +112,17 @@ plot3d(R1_all_inputs.neurons,col='red',lwd=2,WithNodes=FALSE,soma=TRUE)
 clear3d()
 ```
 Finding all the <span style="color:blue"> postsyanptic partners of the R1 neurons 
-```{r,echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+```{r,webgl=TRUE,echo=TRUE,results='hide'}
 R1_all_outputs=unique(neuprint_connection_table(R1.info$bodyid,prepost='POST')$partner)
-```
-```{r,echo=TRUE,results='hide',message=FALSE,warning=FALSE,eval=FALSE}
 R1_all_outputs.neurons=neuprint_read_neurons(R1_all_outputs)
-```
-```{r, webgl=TRUE, echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+
 open3d(userMatrix=hemibrainMatrix,windowRect=windowRect,zoom=0.7)
 plot3d(R1_neurons,col='black',lwd=2,WithNodes=FALSE,soma=TRUE)
 plot3d(R1_all_outputs.neurons,col='blue',lwd=2,WithNodes=FALSE,soma=TRUE)
 
 ```
 Next,group these inptus and outputs by type 
-```{r, webgl=TRUE, echo=TRUE,results='hide',message=FALSE,warning=FALSE}
+```{r, webgl=TRUE, echo=TRUE,results='hide'}
 library(plyr)
 #group the inputs by type 
 R1_all_inputs_count=count(neuprint_get_meta(R1_all_inputs),'type')
@@ -154,14 +145,8 @@ print(plot)
 ```
 
 We can also look only at the synaptic partners which are common to the set of all R1 neurons using neuprint_common_connectivity
-```{r,echo=FALSE,results='hide',message=FALSE,warning=FALSE}
-R1_common_inputs=neuprint_common_connectivity(R1.info$bodyid,prepost='PRE')
-R1_common_inputs.neurons=read.neurons('data/R1_common_input_neurons.swc',class="neuron")
 
-R1_common_outputs=neuprint_common_connectivity(R1.info$bodyid,prepost='POST')
-R1_common_outputs.neurons=read.neurons('data/R1_common_output_neurons.swc',class="neuron")
-```
-```{r,echo=TRUE,results='hide',message=FALSE,warning=FALSE,eval=FALSE}
+```{r,echo=TRUE,results='hide'}
 R1_common_inputs=neuprint_common_connectivity(R1.info$bodyid,prepost='PRE')
 R1_common_inputs.neurons=neuprint_read_neurons(as.character(colnames(R1_common_inputs)))
 
@@ -213,4 +198,3 @@ Heatmap(adj_mat,row_title='R',column_title='EPG',show_row_dend=FALSE,
 
 ```
 
-<font size=5> Get the shortest paths </font>
