--- a/R-notebooks/basic-nat-functions.Rmd
+++ b/R-notebooks/basic-nat-functions.Rmd
@@ -3,11 +3,11 @@ title: "Basic Nat Functions"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning=FALSE, message=FALSE)
-knit_hooks$set(webgl = hook_webgl)
-source('/Users/isabeldalessandro/Downloads/loadNatPackages.R')
+source('loadNatPackages.R')
 loadNatPackages()
 source('nat-startup.R')
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
+knit_hooks$set(webgl = hook_webgl)
 ```
 
 ```{r global_options,include=FALSE}
