--- a/R-notebooks/working-with-hemibrain-data.Rmd
+++ b/R-notebooks/working-with-hemibrain-data.Rmd
@@ -4,11 +4,11 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-knit_hooks$set(webgl = hook_webgl)
-source('/Users/isabeldalessandro/Downloads/loadNatPackages.R')
+source('loadNatPackages.R')
 loadNatPackages()
 source('nat-startup.R')
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
+knit_hooks$set(webgl = hook_webgl)
 ```
 
 ```{r global_options,include=FALSE}
@@ -138,7 +138,7 @@ R1_all_partners.m=melt(R1_all_partners, id.vars='type')
 R1_all_partners.m=R1_all_partners.m[order(-R1_all_partners.m$value),]
 R1_all_partners.m$Groups <- factor(R1_all_partners.m$type, levels = R1_all_partners[order(R1_all_partners$freq.x),]$type)
 plot<-ggplot(R1_all_partners.m,aes(fill=variable,x=Groups,y=value))+geom_bar(stat="identity")+
-  coord_flip()+theme_bw()+scale_x_discrete(name ="Region")+ ylab('Synapse Count')+theme(legend.position="none")+scale_fill_manual(values=c("blue","red"))
+  coord_flip()+theme_bw()+scale_x_discrete(name ="Region")+ ylab('Synapse Count')+theme(legend.position="none")+scale_fill_manual(values=c("red","blue"))
 print(plot)
 ```
 
@@ -174,7 +174,7 @@ R1_common_partners.m=melt(R1_common_partners, id.vars='type')
 R1_common_partners.m=R1_common_partners.m[order(-R1_common_partners.m$value),]
 R1_common_partners.m$Groups <- factor(R1_common_partners.m$type, levels = R1_common_partners[order(R1_common_partners$freq.y),]$type)
 R1_plot=ggplot(R1_common_partners.m,aes(fill=variable,x=Groups,y=value))+geom_bar(stat="identity")+ ggtitle('R1a common partners')+
-  coord_flip()+theme_bw()+scale_x_discrete(name ="Neuron Type")+ ylab('# Connections')+theme(legend.position="none")+scale_fill_manual(values=c("blue","red"))
+  coord_flip()+theme_bw()+scale_x_discrete(name ="Neuron Type")+ ylab('# Connections')+theme(legend.position="none")+scale_fill_manual(values=c("red","blue"))
 print(R1_plot)
 ```
 
